OLLAMA support + UI optimizations
